--- a/app/views/public/landings/templates/new/_pros_cons.html.slim
+++ b/app/views/public/landings/templates/new/_pros_cons.html.slim
@@ -13,64 +13,66 @@
     .pros_cons-table
       .pros_cons-header
         .pros_cons-cell
+        .pros_cons-cell.is-winner
           | Kjstar Z07-5
         .pros_cons-cell
           | Китайская подделка
-      .pros_cons-body
-        .pros_cons-row
-          .pros_cons-row_title
-            | Комплектация
-          .pros_cons-cell
-            .pros_cons-cell_title
-              | Кнопка фотографии встроена в ручку монопода
-            .pros_cons-cell_description
-              | Вытяните руку с палкой вперед, и жмите на кнопку большим пальцем. Никаких дополнительных ненужных аксессуаров!
-          .pros_cons-cell
-            .pros_cons-cell_title
-              | Кнопка находится на отдельном брелоке
-            .pros_cons-cell_description
-              | Она потеряется в самый неподходящий момент. Представьте, вы поднимались на горную вершину несколько часов, чтобы сделать уникальный кадр,
-                и вдруг обнаруживаете, что забыли брелок с кнопкой, или что еще хуже — потеряли его.
-        .pros_cons-row
-          .pros_cons-row_title
-            | Качество телескопической трубки
-          .pros_cons-cell
-            .pros_cons-cell_title
-              | Телескопические трубки плотно держат ваш телефон
-            .pros_cons-cell_description
-              | Не переживайте за свой смартфон, просто делайте отличные снимки в любых условиях!
-          .pros_cons-cell
-            .pros_cons-cell_title
-              | Телескопические трубки прокручиваются под массой телефона
-            .pros_cons-cell_description
-              | Вы вытягиваете руку чтобы сделать отличный снимок, и вдруг телескопическая трубка прокручивается и телефон оказывается верх тормашками.
-        .pros_cons-row
-          .pros_cons-row_title
-            | Качество креплений
-          .pros_cons-cell
-            .pros_cons-cell_title
-              | Крепления сделаны из качественных материалов
-            .pros_cons-cell_description
-              | И будут крепко держать ваш смартфон тогда, когда это действительно нужно.
-          .pros_cons-cell
-            .pros_cons-cell_title
-              | Крепления могут подвести в любой момент
-            .pros_cons-cell_description
-              | Они могут сломаться даже в вашей сумке! Смартфон может выпасть из них и разбиться.
-        .pros_cons-row
-          .pros_cons-row_title
-          .pros_cons-cell
-            .pros_cons-cell_title
-              | Качественный товар за оправданную цену
-          .pros_cons-cell
-            .pros_cons-cell_title
-              | Дешевле качественных аналогов на несколько сотен рублей
-        .pros_cons-row.is-last
-          .pros_cons-cell
-            .pros_cons-cell_title
-              .pros_cons-button
-                | Купить монопод Kjstar Z05-7
-          .pros_cons-cell
-            .pros_cons-cell_title
-              .pros_cons-button
-                | Купить китайскую подделку
+      .pros_cons-row
+        .pros_cons-cell
+          | Комплектация
+        .pros_cons-cell.is-true.is-winner
+          .pros_cons-cell_title
+            | Кнопка фотографии встроена в ручку монопода
+          .pros_cons-cell_description
+            | Вытяните руку с палкой вперед, и жмите на кнопку большим пальцем. Никаких дополнительных ненужных аксессуаров!
+        .pros_cons-cell.is-false
+          .pros_cons-cell_title
+            | Кнопка находится на отдельном брелоке
+          .pros_cons-cell_description
+            | Она потеряется в самый неподходящий момент. Представьте, вы поднимались на горную вершину несколько часов, чтобы сделать уникальный кадр,
+              и вдруг обнаруживаете, что забыли брелок с кнопкой, или что еще хуже — потеряли его.
+      .pros_cons-row
+        .pros_cons-cell
+          | Качество телескопической трубки
+        .pros_cons-cell.is-true.is-winner
+          .pros_cons-cell_title
+            | Телескопические трубки плотно держат ваш телефон
+          .pros_cons-cell_description
+            | Не переживайте за свой смартфон, просто делайте отличные снимки в любых условиях!
+        .pros_cons-cell.is-false
+          .pros_cons-cell_title
+            | Телескопические трубки прокручиваются под массой телефона
+          .pros_cons-cell_description
+            | Вы вытягиваете руку чтобы сделать отличный снимок, и вдруг телескопическая трубка прокручивается и телефон оказывается верх тормашками.
+      .pros_cons-row
+        .pros_cons-cell
+          | Качество креплений
+        .pros_cons-cell.is-true.is-winner
+          .pros_cons-cell_title
+            | Крепления сделаны из качественных материалов
+          .pros_cons-cell_description
+            | И будут крепко держать ваш смартфон тогда, когда это действительно нужно.
+        .pros_cons-cell.is-false
+          .pros_cons-cell_title
+            | Крепления могут подвести в любой момент
+          .pros_cons-cell_description
+            | Они могут сломаться даже в вашей сумке! Смартфон может выпасть из них и разбиться.
+      .pros_cons-row.has-only_title
+        .pros_cons-cell
+          | Цена
+        .pros_cons-cell.is-true.is-winner
+          .pros_cons-cell_title
+            | Качественный товар за оправданную цену
+        .pros_cons-cell.is-true
+          .pros_cons-cell_title
+            | Дешевле качественных аналогов на несколько сотен рублей
+      .pros_cons-row.is-last
+        .pros_cons-cell
+        .pros_cons-cell.is-winner
+          .pros_cons-cell_title
+            .big_button.for-pros_cons
+              | Купить монопод Kjstar
+        .pros_cons-cell
+          .pros_cons-cell_title
+            .big_button.for-pros_cons
+              | Купить подделку
