--- a/app/assets/stylesheets/public/new_template/blocks/big_button.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/big_button.sass
@@ -12,3 +12,11 @@
   b
     font-weight: bold
     margin: 0 5px
+
+  &.for-pros_cons
+    width: 100%
+    padding: 0 10px
+    font-size: 15px
+    height: 47px
+    line-height: 45px
+
