--- a/app/views/public/landings/templates/new/_pros_cons.html.slim
+++ b/app/views/public/landings/templates/new/_pros_cons.html.slim
@@ -19,12 +19,12 @@
           | Китайская подделка
       .pros_cons-row
         .pros_cons-cell
-          | Комплектация
+          | Кнопка фотографии
         .pros_cons-cell.is-true.is-winner
           .pros_cons-cell_title
             | Кнопка фотографии встроена в ручку монопода
           .pros_cons-cell_description
-            | Вытяните руку с палкой вперед, и жмите на кнопку большим пальцем. Никаких дополнительных ненужных аксессуаров!
+            | Вытяните руку с палкой вперед, и жмите на кнопку большим пальцем. Снимок готов! Никаких дополнительных ненужных аксессуаров!
         .pros_cons-cell.is-false
           .pros_cons-cell_title
             | Кнопка находится на отдельном брелоке
