Implement guarantees block

--- a/app/views/public/landings/templates/new/_guarantees.html.slim
+++ b/app/views/public/landings/templates/new/_guarantees.html.slim
@@ -1,26 +1,36 @@
 .guarantees
-  .guarantees-title
-    | Мы работаем напрямую с производителем монопода Kjstar Z07-5, а еще...
+  .guarantees-inner
+    .guarantees-title
+      | Мы работаем напрямую с производителем монопода&nbsp;Kjstar&nbsp;Z07-5,
+      br
+      | а еще...
 
-  .guarantees-list
-    .guarantees-list_item
-      .guarantees-list_item_img
-      .guarantees-list_item_title
-        | Наш товар не подведет вас в самый неподходящий момент
-      .guarantees-list_item_description
-        | Веселая вечеринка или экстремальное путешествие — наш монопод всегда будет вашим надежным помощником.
+    .guarantees-list
+      .guarantees-item
+        .guarantees-item_img
+          img src=image_path('public/palka/icons/guarantee.png')
+        .guarantees-item_title
+          | Наш товар не подведет вас в самый неподходящий момент
+        .guarantees-item_description
+          | Веселая вечеринка или экстремальное путешествие — наш монопод всегда будет вашим надежным помощником.
 
-    .guarantees-list_item
-      .guarantees-list_item_img
-      .guarantees-list_item_title
-        | Если вас не устроит качество, мы вернем вам ваши деньги
-      .guarantees-list_item_description
-        | Все моноподы подходят проверку на работоспособность. Но если вас все-таки что-то не устроит — мы вернем ваши деньги.
+      .guarantees-item
+        .guarantees-item_img
+          img src=image_path('public/palka/icons/moneyback.png')
+        .guarantees-item_title
+        .guarantees-item_title
+          | Если вас не устроит качество, мы вернем вам ваши деньги
+        .guarantees-item_description
+          | Все моноподы подходят проверку на работоспособность. Но если вас все-таки что-то не устроит — мы вернем ваши деньги.
 
-    .guarantees-list_item
-      .guarantees-list_item_img
-      .guarantees-list_item_title
-        | Только оригинальная продукция
-      .guarantees-list_item_description
-        | Не экономьте на впечатлениях, закажите оригинальную палку для селфи Kjstar Z05-7 прямо сейчас!
+      .guarantees-item
+        .guarantees-item_img
+          img src=image_path('public/palka/icons/original_product.png')
+        .guarantees-item_title
+        .guarantees-item_title
+          | Только оригинальная продукция
+        .guarantees-item_description
+          | Не экономьте на впечатлениях, закажите оригинальную палку для селфи Kjstar Z05-7 прямо сейчас!
 
+    .guarantees-more
+      | Вы ничем не рискуете, сделав заказ у нас! Оплата товара происходит при&nbsp;получении&nbsp;на&nbsp;руки.
