Implement fancy animations

--- a/app/views/public/landings/templates/new/_advantages.html.slim
+++ b/app/views/public/landings/templates/new/_advantages.html.slim
@@ -1,36 +1,36 @@
 .advantages
   .advantages-inner
-    .advantages-title
+    .advantages-title.animate-show_fast
       | Монопод Kjstar Z07-5 (палка для селфи) подойдет вам, если...
 
     .advantages-list
-      .advantages-item
+      .advantages-item.animate-show_fast
         .advantages-item_img
           img src=image_path('public/palka/logos/ios.png')
         .advantages-item_title
           | Вы владелец смартфона на&nbsp;базе&nbsp;<b>iOS</b> (iPhone&nbsp;любой&nbsp;модели)
 
-      .advantages-item
+      .advantages-item.animate-show_fast
         .advantages-item_img
           img src=image_path('public/palka/logos/android.png')
         .advantages-item_title
           | Вы владелец смартфона на&nbsp;базе&nbsp;<b>Android</b>
 
-      .advantages-item
+      .advantages-item.animate-show_fast
         .advantages-item_img
           img src=image_path('public/palka/logos/gopro.jpg')
         .advantages-item_title
           | Вы владелец камеры&nbsp;<b>GoPro</b>
 
-      .advantages-item
+      .advantages-item.animate-show_fast
         .advantages-item_img
           img src=image_path('public/palka/logos/bluetooth.png')
         .advantages-item_title
           | Ваш смартфон поддерживает подключение&nbsp;по&nbsp;<b>Bluetooth</b>
 
-    .advantages-more
+    .advantages-more.animate-show_fast
       | Эта палка для селфи подходит к смартфону любого размера!
-    .advantages-more_info
+    .advantages-more_info.animate-show_fast
       .advantages-more_img
         img src=image_path('public/palka/other/kreplenie2.jpg')
       .advantages-more_text
