--- a/app/views/public/landings/templates/new/_guarantees.html.slim
+++ b/app/views/public/landings/templates/new/_guarantees.html.slim
@@ -1,12 +1,12 @@
 .guarantees
   .guarantees-inner
-    .guarantees-title
+    .guarantees-title.animate-show_fast
       | Мы работаем напрямую с производителем монопода&nbsp;Kjstar&nbsp;Z07-5,
       br
       | а еще...
 
     .guarantees-list
-      .guarantees-item
+      .guarantees-item.animate-show_fast
         .guarantees-item_img
           img src=image_path('public/palka/icons/guarantee.png')
         .guarantees-item_title
@@ -14,7 +14,7 @@
         .guarantees-item_description
           | Веселая вечеринка или экстремальное путешествие — наш монопод всегда будет вашим надежным помощником.
 
-      .guarantees-item
+      .guarantees-item.animate-show_fast
         .guarantees-item_img
           img src=image_path('public/palka/icons/moneyback.png')
         .guarantees-item_title
@@ -22,7 +22,7 @@
         .guarantees-item_description
           | Все моноподы подходят проверку на работоспособность. Но если вас все-таки что-то не устроит — мы вернем ваши деньги.
 
-      .guarantees-item
+      .guarantees-item.animate-show_fast
         .guarantees-item_img
           img src=image_path('public/palka/icons/original_product.png')
         .guarantees-item_title
@@ -30,5 +30,5 @@
         .guarantees-item_description
           | Не экономьте на впечатлениях, закажите оригинальную палку для селфи Kjstar Z05-7 прямо сейчас!
 
-    .guarantees-more
+    .guarantees-more.animate-show_fast
       | Вы ничем не рискуете, сделав заказ у нас! Оплата товара происходит при&nbsp;получении&nbsp;на&nbsp;руки.
