--- a/app/views/public/landings/templates/new/_photo_slider.html.slim
+++ b/app/views/public/landings/templates/new/_photo_slider.html.slim
@@ -1,6 +1,6 @@
 - photos = landing.landing_images.for_gallery
 
-.photo_slider.js-headline-photos
+.photo_slider.animate-show_fast
   .photo_slider-arrow_left
     = fa_icon 'chevron-left'
   .photo_slider-photo_wrap
