--- a/app/views/public/landings/templates/new/_pros_cons.html.slim
+++ b/app/views/public/landings/templates/new/_pros_cons.html.slim
@@ -1,14 +1,14 @@
 .pros_cons
   .pros_cons-inner
-    .pros_cons-title
+    .pros_cons-title.animate-show_fast
       | Мы продаем только оригинальные моноподы&nbsp;Kjstar&nbsp;Z05-7
-    .pros_cons-description
+    .pros_cons-description.animate-show_fast
       | Остерегайтесь дешевых подделок!
       br
       | Купив подделку, вы сэкономите пару сотен рублей, но испорченное настроение не&nbsp;стоит&nbsp;этих&nbsp;денег.
       br
       | Наш монопод не подведет вас в самый неподходящий момент!
-    .pros_cons-subtitle
+    .pros_cons-subtitle.animate-show_fast
       | Чем монопод Kjstar Z07-5 отличается от дешевых подделок?
     .pros_cons-table
       .pros_cons-header
