Implement instructions block

--- a/app/views/public/landings/show.html.slim
+++ b/app/views/public/landings/show.html.slim
@@ -16,6 +16,7 @@
 = render 'public/landings/templates/new/advantages', landing: @landing
 = render 'public/landings/templates/new/pros_cons', landing: @landing
 = render 'public/landings/templates/new/guarantees', landing: @landing
+= render 'public/landings/templates/new/instructions', landing: @landing
 = render 'public/landings/templates/new/middle_page_cta', landing: @landing
 = render 'public/landings/templates/new/reviews', landing: @landing
 = render 'public/landings/templates/new/how_we_work', landing: @landing
