--- a/app/views/public/landings/templates/new/_guarantees.html.slim
+++ b/app/views/public/landings/templates/new/_guarantees.html.slim
@@ -10,7 +10,7 @@
         .guarantees-item_img
           img src=image_path('public/palka/icons/guarantee.png')
         .guarantees-item_title
-          | Наш товар не подведет вас в самый неподходящий момент
+          | Наш монопод не подведет вас в самый неподходящий момент
         .guarantees-item_description
           | Веселая вечеринка или экстремальное путешествие — наш монопод всегда будет вашим надежным помощником.
 
