--- a/app/views/public/landings/templates/new/_advantages.html.slim
+++ b/app/views/public/landings/templates/new/_advantages.html.slim
@@ -14,7 +14,7 @@
         .advantages-item_img
           img src=image_path('public/palka/logos/android.png')
         .advantages-item_title
-          | Вы владелец смартфона на&nbsp;базе&nbsp;<b>Android</b>
+          | Вы владелец смартфона на&nbsp;базе&nbsp;<b>Android</b><br>(Samsung, HTC, Sony&nbsp;и&nbsp;др.)
 
       .advantages-item.animate-show_fast
         .advantages-item_img
