--- a/app/assets/stylesheets/public/new_template/blocks/menu.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/menu.sass
@@ -17,10 +17,11 @@
   list-style-type: none
   cursor: pointer
   color: lighten($text, 5%)
+  font-weight: bold
   transition: color .2s
 
   &:first-child
     margin-left: 0
 
   &:hover
-    color: darken($text, 15%)
+    color: darken($text, 12%)
