--- a/app/assets/stylesheets/public/new_template/blocks/timer.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/timer.sass
@@ -44,7 +44,7 @@
     font-size: 23px
     line-height: 50px
     text-shadow: none
-    background: rgba(0, 0, 0, .35)
+    background: rgba(0, 0, 0, .25)
     margin-bottom: 1px
     color: #fff
     border-radius: 3px
@@ -55,3 +55,22 @@
 
 .timer-seconds
   margin-right: 0
+
+.timer.for-middle_page_cta
+  text-align: center
+  vertical-align: middle
+  margin: 0 25px 25px
+
+  .timer-message,
+  .timer-wrapper
+    float: none
+    margin-right: 0
+
+  .timer-wrapper
+    display: inline-block
+
+  .timer-hours,
+  .timer-minutes,
+  .timer-seconds
+    span
+      background: rgba(255, 255, 255, .5)
