--- a/app/assets/stylesheets/public/new_template/blocks/big_button.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/big_button.sass
@@ -20,3 +20,10 @@
     height: 47px
     line-height: 45px
 
+  &.for-middle_page_cta
+    margin: 0 25px
+    vertical-align: middle
+    padding: 0 30px
+    height: 57px
+    line-height: 55px
+    font-size: 23px
