--- a/app/assets/stylesheets/public/new_template/blocks/instructions.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/instructions.sass
@@ -6,20 +6,19 @@
 .instructions-inner
   +acts_as_layout_row
   padding-top: 50px
-  padding-bottom: 40px
+  padding-bottom: 50px
 
 .instructions-title
   +acts_as_section_title
 
 .instructions-list
   margin-top: 50px
-  margin-bottom: 30px
   text-align: center
 
 .instructions-item
   display: inline-block
   width: 33%
-  padding: 0 20px 40px
+  padding: 0 20px
   font-size: 17px
   font-weight: bold
   vertical-align: top
