--- a/app/assets/stylesheets/public/new_template/blocks/timer.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/timer.sass
@@ -73,4 +73,5 @@
   .timer-minutes,
   .timer-seconds
     span
+      text-shadow: 0 1px rgba(0, 0, 0, .5)
       background: rgba(255, 255, 255, .5)
