--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -35,7 +35,7 @@
   display: table
   table-layout: fixed
   width: 100%
-  margin: 35px 0
+  margin: 30px 0 35px
 
 .main_headline-info_inner
   display: table-row
