Add route-specific actions

--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -5,7 +5,7 @@
   meta name='description' content=@landing.meta_description
 
 - content_for :stylesheet do
-  = stylesheet_link_tag "public/new_template/all.css"
+  = stylesheet_link_tag 'public/new_template/all.css'
 
 - content_for :script do
   = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
