Add markup and styles for reviews

--- a/app/views/public/landings/templates/old/_reviews.html.slim
+++ b/app/views/public/landings/templates/old/_reviews.html.slim
@@ -12,7 +12,7 @@
         - woman_reviews = 0
         - man_reviews = 0
 
-        - @landing.reviews.each_with_index do |review|
+        - @landing.reviews.each do |review|
           .review
             .review-text
               = fa_icon 'quote-left'
