Add animations to reviews

--- a/app/views/public/landings/templates/new/_reviews.html.slim
+++ b/app/views/public/landings/templates/new/_reviews.html.slim
@@ -3,9 +3,9 @@
 
 .reviews
   .reviews-inner
-    .reviews-title
-      | Что говорят наши клиенты
-    .reviews-wrap data-view='app#reviews'
+    .reviews-title.animate-show_fast
+      | Что говорят наши покупатели
+    .reviews-wrap.animate-show_zoom data-view='app#reviews'
       .reviews-arrow_left.js-reviews-arrow_left
         = fa_icon 'chevron-left'
       .reviews-arrow_right.js-reviews-arrow_right
