Implement "how we work" block

--- a/app/assets/stylesheets/public/new_template/global.sass
+++ b/app/assets/stylesheets/public/new_template/global.sass
@@ -33,3 +33,10 @@
 
 .overflow
   overflow: hidden
+
+.g-dashed
+  display: inline
+  border-bottom: 1px dashed
+  padding-bottom: 3px
+  cursor: pointer
+  +no_select
