--- a/app/views/public/landings/templates/new/_how_we_work.html.slim
+++ b/app/views/public/landings/templates/new/_how_we_work.html.slim
@@ -37,5 +37,7 @@
           | Вы получаете свой товар и платите за него на почте или курьеру
 
     .how_we_work-more.animate-show_fast
+      | Доставка по Москве от одного дня, доставка во все регионы РФ в течение недели
+      br
       .g-dashed
         | Подробная информация о доставке
