--- a/app/views/public/landings/templates/new/_guarantees.html.slim
+++ b/app/views/public/landings/templates/new/_guarantees.html.slim
@@ -20,7 +20,7 @@
         .guarantees-item_title
           | Если вас не устроит качество, мы вернем вам ваши деньги
         .guarantees-item_description
-          | Все моноподы подходят проверку на работоспособность. Но если вас все-таки что-то не устроит — мы вернем ваши деньги.
+          | Все моноподы продходят проверку на работоспособность. Но если вас все-таки что-то не устроит — мы вернем ваши деньги.
 
       .guarantees-item.animate-show_fast
         .guarantees-item_img
