Implement footer cta

--- a/app/assets/stylesheets/public/new_template/blocks/faq.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/faq.sass
@@ -1,7 +1,7 @@
 @import 'public/new_template/imports'
 
 .faq
-  border-bottom: 1px solid $bd
+  border-bottom: 1px solid darken(#9F9F9F, 20%)
   background: linear-gradient(#424242, #A0A0A0)
 
 .faq-inner
