--- a/app/assets/stylesheets/public/new_template/blocks/photo_slider.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/photo_slider.sass
@@ -6,6 +6,12 @@
   vertical-align: middle
   text-align: center
 
+  &.is-white
+    .photo_slider-photo_wrap,
+    .photo_slider-arrow_left:hover,
+    .photo_slider-arrow_right:hover
+      background: rgba(255, 255, 255, .3)
+
 .photo_slider-photo_wrap
   position: relative
   float: left
