--- a/app/assets/stylesheets/public/new_template/blocks/price.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/price.sass
@@ -19,7 +19,7 @@
     top: -27px
     +hidpi-inline('public/rounded_arrow_white.png')
 
-  &.for-middle_page_cta
+  &.is-white
     margin-top: 30px
     margin-bottom: 20px
     background: rgba(255, 255, 255, .5)
