--- a/app/assets/stylesheets/public/new_template/blocks/timer.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/timer.sass
@@ -56,6 +56,17 @@
 .timer-seconds
   margin-right: 0
 
+.timer.is-white
+  color: #fff
+  text-shadow: 0 1px rgba(0, 0, 0, .5)
+
+  .timer-hours,
+  .timer-minutes,
+  .timer-seconds
+    span
+      text-shadow: 0 1px rgba(0, 0, 0, .5)
+      background: rgba(255, 255, 255, .5)
+
 .timer.for-middle_page_cta
   text-align: center
   vertical-align: middle
