--- a/app/views/public/landings/templates/new/_middle_page_cta.html.slim
+++ b/app/views/public/landings/templates/new/_middle_page_cta.html.slim
@@ -17,7 +17,7 @@
         | Вы сэкономите <b>600&nbsp;рублей</b>, сделав заказ сегодня!
 
         .middle_page_cta-price
-          = render 'public/landings/templates/new/price', landing: landing, modifier_class: 'for-middle_page_cta'
+          = render 'public/landings/templates/new/price', landing: landing, modifier_class: 'is-white'
 
         .middle_page_cta-actions
           = render 'public/shared/timer',
