Add inline modals

--- a/app/assets/stylesheets/public/old_template/main_page.css.sass
+++ b/app/assets/stylesheets/public/old_template/main_page.css.sass
@@ -5,7 +5,7 @@ $base: #54709b
 @import 'global'
 @import 'layout'
 
-@import 'blocks/modals/*'
+@import '../shared/blocks/modals/*'
 @import 'blocks/timer'
 
 =title
