--- a/app/views/public/landings/templates/new/_header.html.slim
+++ b/app/views/public/landings/templates/new/_header.html.slim
@@ -3,7 +3,7 @@
     ul.menu.for-header
       li.menu-item
         | О магазине
-      li.menu-item
+      li.menu-item data-inline-modal='shipping'
         | О доставке
       li.menu-item
         | Гарантии
