--- a/app/views/public/pages/delivery.html.slim
+++ b/app/views/public/pages/delivery.html.slim
@@ -1,44 +1,1 @@
-p
-  | Мы доставляем практически во все города России, Украины, Беларуси. Доступные способы зависят от региона доставки.
-    Стоимость доставки в разные регионы может различаться и составляет по Москве — 297 руб (97 руб. самовывоз), Московская область — 397-497 руб.
-
-h3
-  | Доставка курьером по России
-p
-  | Благодаря нашей собственной службе доставки TNX Express, а также сотрудничеству с региональными курьерскими службами,
-    мы доставляем курьерами почти во всех крупных города России (более 5000 городов). Сроки доставки в среднем составляют от 2 до 5-10 рабочих дней и зависят от города.
-    По Москве доставка выполняется за 1 день. Вы сможете уточнить точный срок доставки после оформления заказа.
-
-h3
-  | Самовывоз — пункты выдачи заказов в РФ
-p
-  | У нас есть пункты самовывоза в большом количестве городов России:
-  br
-  | <b>Москва</b>, <b>Санкт-Петербург</b>, Абакан, Архангельск, Астрахань, Барнаул, Белгород, Березники, Благовещенск, Братск,
-    Брянск, Великий Новгород, Владимир, Волгоград, Волгодонск, Воронеж, Екатеринбург, Иваново, Ижевск, Иркутск, Йошкар-Ола,
-    Казань, Калуга, Каменск-Уральский, Кемерово, Киров, Комсомольск-Амуре, Кострома, Краснодар, Красноярск, Курган, Курск,
-    Липецк, Магнитогорск, Миасс, Мурманск, Набережные Челны, Нижневартовск, Нижний Новгород, Нижний Тагил, Новокузнецк,
-    Новороссийск, Новосибирск, Омск, Орел, Оренбург, Пенза, Пермь, Петрозаводск, Пятигорск, Ростов-на-Дону, Рязань,
-    Самара, Саратов, Серов, Смоленск, Ставрополь, Сургут, Сыктывкар, Таганрог, Тамбов, Тверь, Тольятти, Томск, Тула,
-    Тюмень, Улан-Удэ, Ульяновск, Уфа, Ухта, Хабаровск, Ханты-Мансийск, Чебоксары, Челябинск, Чита, Ярославль. Сроки доставки до пункта самовывоза в среднем составляют от 2 до 10 дней и зависят от города.
-
-h3
-  | Отправка с помощью Почты РФ
-p
-  | Мы можем отправить заказ с помощью Почты РФ в любую точку России. Возможна оплата как наложенным платежом, так и по предоплате.
-    Срок доставки почтой РФ из Москвы — в среднем, от 7 до 30 дней. Мы рекомендуем выбирать доставку первыми двумя способами,
-    особенно, если вы живете недалеко от городов, где есть пункты самовывоза, т.к. это значительно быстрее и часто дешевле.
-
-h3
-  | Отправка по Украине
-p
-  | Большую часть товаров-хитов мы отправляем Новой Почтой в любой город Украины, срок доставки — от 1-2 дней.
-    Стоимость доставки — по тарифам Новой Почты. Доставка в Киеве выполняется нашей собственной курьерской службой в течение 1-го дня.
-    Оплата производится в гривнах. Более подробную информацию о доставке Вы можете уточнить по телефону службы доставки: (044) 383-43-35.
-
-h3
-  | Доставка по Беларуси
-p
-  | Все предлагаемые товары мы отправляем в Беларусь. Доставка по Минску осуществляется нашей собственной курьерской службой.
-    В остальные регионы доставка осуществляется с помощью Белпочты. Стоимость доставки сообщит оператор при подтверждении заказа
-    (она значительно дешевле, чем доставка по РФ).
+= render 'public/shared/shipping', landing: @landing
