--- a/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
@@ -1,5 +1,3 @@
-@import 'public/old_template/imports'
-
 .modal
   width: 750px
   border-radius: 5px
@@ -20,9 +18,8 @@
 .modal-header
   overflow: hidden
   padding: 15px 15px 15px 25px
-  height: 25px
   line-height: 25px
-  background: $light_400
+  background: #bbb
   color: #fff
   white-space: nowrap
   text-shadow: 0 1px 1px rgba(0, 0, 0, .7)
@@ -33,7 +30,7 @@
 
 .modal-body
   margin-top: -1px
-  border-top: 1px solid $light_400
+  border-top: 1px solid #999
   background: #fff
   color: #555
   overflow: hidden
@@ -63,7 +60,7 @@
   padding: 15px
 
 .modal-buttons
-  border-top: 1px solid $transparent_100
+  border-top: 1px solid #999
   padding: 15px
   height: 25px
 
