--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -25,3 +25,8 @@
 = render 'public/landings/templates/new/faq', landing: @landing
 = render 'public/landings/templates/new/footer_cta', landing: @landing
 = render 'public/landings/templates/new/footer', landing: @landing
+
+= render 'public/shared/modals'
+
+script id='shipping' data-title='Информация о доставке'
+  = render 'public/shared/shipping', landing: @landing
