Add scrollbar fix

--- a/app/views/public/landings/templates/new/_description.html.slim
+++ b/app/views/public/landings/templates/new/_description.html.slim
@@ -1,4 +1,4 @@
-.description
+.description.js-scroll_fix
   .description-inner
     .description-title.animate-show_fast
       | С палкой для селфи Kjstar Z07-5...
