--- a/app/views/public/landings/templates/new/_footer_cta.html.slim
+++ b/app/views/public/landings/templates/new/_footer_cta.html.slim
@@ -1,6 +1,4 @@
-.footer_cta
-  .footer_cta-bg
-    img.footer_cta-bg_image src=image_path('public/palka/footer_cta/bg.jpg')
+.footer_cta.js-scroll_fix
   .footer_cta-inner
     .footer_cta-title
       | Делай неповторимые селфи с моноподом Kjstar Z05-7
@@ -36,3 +34,5 @@
             span.footer_cta-phone_info
               | (звонок по РФ бесплатный)
 
+  .footer_cta-bg
+    img.footer_cta-bg_image src=image_path('public/palka/footer_cta/bg.jpg')
