--- a/app/views/public/landings/templates/new/_guarantees.html.slim
+++ b/app/views/public/landings/templates/new/_guarantees.html.slim
@@ -1,4 +1,4 @@
-.guarantees
+.guarantees.js-scroll_fix
   .guarantees-inner
     .guarantees-title.animate-show_fast
       | Мы работаем напрямую с производителем монопода&nbsp;Kjstar&nbsp;Z07-5,
