--- a/app/views/public/landings/templates/new/_header.html.slim
+++ b/app/views/public/landings/templates/new/_header.html.slim
@@ -1,4 +1,4 @@
-.header data-view='app#header'
+.header.js-scroll_fix data-view='app#header'
   .header-inner
     ul.menu.for-header
       li.menu-item
