--- a/app/views/public/landings/templates/new/_instructions.html.slim
+++ b/app/views/public/landings/templates/new/_instructions.html.slim
@@ -1,4 +1,4 @@
-.instructions
+.instructions.js-scroll_fix
   .instructions-inner
     .instructions-title.animate-show_fast
       | Инструкция по применению
