--- a/app/views/public/landings/templates/new/_middle_page_cta.html.slim
+++ b/app/views/public/landings/templates/new/_middle_page_cta.html.slim
@@ -1,6 +1,4 @@
-.middle_page_cta
-  .middle_page_cta-bg
-    img.middle_page_cta-bg_image src=image_path('public/palka/main_page_cta/bg.jpg')
+.middle_page_cta.js-scroll_fix
   .middle_page_cta-inner
     .middle_page_cta-title
       | Спешите воспользоваться ограниченным предложением!
@@ -27,3 +25,6 @@
 
           .big_button.for-middle_page_cta
             | Заказать монопод &rarr;
+
+  .middle_page_cta-bg
+    img.middle_page_cta-bg_image src=image_path('public/palka/main_page_cta/bg.jpg')
