--- a/app/views/public/landings/templates/new/_pros_cons.html.slim
+++ b/app/views/public/landings/templates/new/_pros_cons.html.slim
@@ -1,4 +1,4 @@
-.pros_cons
+.pros_cons.js-scroll_fix
   .pros_cons-inner
     .pros_cons-title.animate-show_fast
       | Мы продаем только оригинальные моноподы&nbsp;Kjstar&nbsp;Z05-7
