--- a/app/views/public/landings/templates/new/_reviews.html.slim
+++ b/app/views/public/landings/templates/new/_reviews.html.slim
@@ -1,7 +1,7 @@
 - woman_reviews = 0
 - man_reviews = 0
 
-.reviews
+.reviews.js-scroll_fix
   .reviews-inner
     .reviews-title.animate-show_fast
       | Что говорят наши покупатели
