--- a/app/views/public/landings/templates/new/_advantages.html.slim
+++ b/app/views/public/landings/templates/new/_advantages.html.slim
@@ -1,4 +1,4 @@
-.advantages
+.advantages.js-scroll_fix
   .advantages-inner
     .advantages-title.animate-show_fast
       | Монопод Kjstar Z07-5 (палка для селфи) подойдет вам, если...
