Add youtube video

--- a/app/assets/stylesheets/public/new_template/blocks/description.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/description.sass
@@ -20,6 +20,35 @@
   padding: 0 20px 40px
   vertical-align: top
 
+  &.is-video
+    width: 45%
+    position: relative
+
+.description-youtube_info
+  position: absolute
+  top: 0
+  width: 140px
+  right: -140px
+  text-align: left
+
+.description-youtube_rank
+  width: 85px
+
+  img
+    width: 100%
+    height: auto
+
+.description-youtube_image
+  margin-top: 3px
+  width: 80px
+
+  img
+    width: 100%
+    height: auto
+
+.description-youtube_views_num
+  font-size: 13px
+
 .description-item_img
   margin-bottom: 20px
 
@@ -28,6 +57,9 @@
     height: auto
     vertical-align: top
     border-radius: 3px
+
+.description-item_video
+  margin-bottom: 20px
 
 .description-item_title
   font-size: 17px
